# project_2

./: .gitignore  API_DOCUMENTATION.md  GITHUB_SETUP.md  PROJECT_SUMMARY.md  README.md  TESTING_GUIDE.md  main.py  manage.py  pyproject.toml  requirements.txt
api/: __init__.py  admin.py  authentication.py  errors.py  exceptions.py  jwt_provider.py  localization.py  middleware.py  models.py  serializers.py  spectacular_extensions.py  storage.py  tasks.py  urls.py  utils.py  validators.py  views.py
api/local/: en.py  ru.py  uz.py
api/migrations/: 0001_initial.py  0002_rename_authon_postmodel_author.py  0003_followmodel.py  0004_usermodel_deleted_at_usermodel_is_active_and_more.py
sm_backend/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
